--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-# lib/
+lib/
 lib64/
 parts/
 sdist/
@@ -112,3 +112,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
